# RoshGPT

./: README.md  agent.py  app.py  main.py  pyproject.toml  quiz_manager.py  rag.py  requirements.txt  server.py  tools.py
chroma_db/: chroma.sqlite3
data/: chatbot_memory.db  langgraph_checkpoints.sqlite  langgraph_checkpoints.sqlite-shm  langgraph_checkpoints.sqlite-wal
data/quiz/: bpsc_bihar_specific.json  bpsc_current_affairs.json  bpsc_economy.json  bpsc_geography.json  bpsc_history.json  bpsc_mixed.json  bpsc_polity.json  bpsc_science.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatArea.css  ChatArea.jsx  InputArea.css  InputArea.jsx  MessageBubble.css  MessageBubble.jsx  Sidebar.css  Sidebar.jsx
templates/: index.html
